--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "astro-blog-test",
   "type": "module",
   "version": "0.0.1",
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,6 +13,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18"
+    "astro": "^2.0.18",
+    "astro-icon": "^0.8.0",
+    "postcss": "^8.4.21",
+    "postcss-preset-env": "^8.0.1"
   }
 }
