--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "importsNotUsedAsValues": "error"
+    "importsNotUsedAsValues": "error",
+    "baseUrl": ".",
+    "paths": {
+      "@types": ["src/types/index"],
+      "@utils": ["src/utils/index"]
+    }
   }
 }
